# c5store

./: .gitignore  README.md
c5store_java/: README.md  build.gradle  gradle.properties  settings.gradle
c5store_java/core/: build.gradle
c5store_java/core/src/main/java/: module-info.java
c5store_java/core/src/main/java/com/excsn/c5store/core/: C5Consts.java  C5DataStore.java  C5FileValueProvider.java  C5FileValueProviderSchema.java  C5InitHolder.java  C5Store.java  C5StoreBuilder.java  C5StoreMgr.java  C5StoreRoot.java  C5StoreSubscriptions.java  C5StoreUtils.java  C5ValueProvider.java  C5ValueProviderSchema.java  ChangeListener.java  ChangeNotifier.java  Debouncer.java  ExtractedConfigData.java  GetDataFn.java  HydrateContext.java  KeyExistsFn.java  PrefixKeysFn.java  SetDataFn.java
c5store_java/core/src/main/java/com/excsn/c5store/core/secrets/: ECUtils.java  EciesX25519SecretDecryptor.java  SecretDecryptor.java  SecretKeyStore.java
c5store_java/core/src/main/java/com/excsn/c5store/core/serializers/: C5JSONValueDeserializer.java  C5ValueDeserializer.java  C5YAMLValueDeserializer.java
c5store_java/core/src/main/java/com/excsn/c5store/core/telemetry/: Logger.java  StatsRecorder.java
c5store_java/core/src/main/java/com/excsn/c5store/core/utils/: DeepEquals.java
c5store_java/core/src/test/java/com/excsn/c5store/core/: C5FileValueProviderTest.java  C5SecretValueTest.java  C5StoreRootTest.java
c5store_java/core/src/test/resources/config/: file_provider_config.yaml  secret_config_bad.yaml
c5store_java/core/src/test/resources/config/foo/: playtest.yaml
c5store_java/core/src/test/resources/config/public_keys/: test_local.pem
c5store_java/example/: build.gradle
c5store_java/example/src/main/java/: module-info.java
c5store_java/example/src/main/java/com/excsn/c5store/example/: Main.java
c5store_java/example/src/main/resources/config/: common.yaml  local.yaml
c5store_java/example/src/main/resources/config/secrets/: secret_store
c5store_js/: CHANGELOG  README.md  package.json  tsconfig.json
c5store_js/example/: package.json
c5store_js/example/config/: local.yaml
c5store_js/example/resources/: pub_data  some_secret.yaml
c5store_js/example/src/: index.ts
c5store_js/scripts/: publish.sh
c5store_js/src/: index.ts  internal.ts  providers.ts  secrets.ts  serialization.ts  telemetry.ts  util.ts
c5store_js/test/: index.ts
c5store_js/test/resources/: common.yaml
c5store_js/test/resources/secret_keys/: test_local.pem
c5store_rust/: API_REFERENCE.md  BOOTSTRAPPER_REFERENCE.md  CHANGELOG.md  Cargo.toml  FUTURE.md  PUBLIC_API.md  README.md
c5store_rust/configs/secret_test/: secret_config.yaml
c5store_rust/configs/test/config/: common.yaml  local.yaml
c5store_rust/examples/: bootstrap.rs
c5store_rust/resources/: example.json  some_secret.yaml  test_e2e_secrets.yaml
c5store_rust/src/: bootstrapper.rs  c5_serde.rs  config_source.rs  data.rs  error.rs  internal.rs  lib.rs  options.rs  providers.rs  secrets.rs  secrets_dummy.rs  serialization.rs  telemetry.rs  util.rs  value.rs
c5store_rust/src/core/: mod.rs  nat_lex_sort.rs  nat_sort.rs
c5store_rust/src/secrets/: mod.rs  systemd.rs
cli/: Cargo.toml
cli/c5_core/: API_REFERENCE.md  Cargo.toml  README.md
cli/c5_core/src/: crypto_ops.rs  error.rs  io_utils.rs  keys.rs  lib.rs  secrets_format.rs  yaml_utils.rs
cli/c5_core/tests/: crypto_tests.rs
cli/c5cli/: Cargo.toml  README.md
cli/c5cli/src/: main.rs  path_parser.rs
cli/c5cli/src/commands/: decrypt.rs  encrypt.rs  generate.rs  mod.rs
cli/c5cli/tests/: cli_decrypt_tests.rs  cli_encrypt_tests.rs  cli_gen_kp_tests.rs  cli_gen_ssh_tests.rs
docs/: README.md  concepts.md  maps_arrays.md  secrets.md  secrets_systemd.md  secrets_trans_serde.md  tech_deep_dive.md  value_providers.md
