[package]
name = "c5store"
version = "0.4.6"
edition = "2024"
authors = ["Norm O <normo.pub@gmail.com>"]
license = "MPL-2.0"

description = "A comprehensive Rust library for unified configuration and secret management, supporting various sources, typed access, and local encryption."
readme = "README.md"
homepage = "https://github.com/normano/c5store/tree/main/c5store_rust"
repository = "https://github.com/normano/c5store.git"
keywords = ["config", "secrets", "settings", "encryption", "yaml"]
categories = [
  "config",
  "cryptography",
  "filesystem",
  "parser-implementations"
]

[dependencies]
base64 = "^0.22"
curve25519-parser = { version = "^0", optional = true  }
dotenvy = { version = "^0.15", optional = true }
ecies_25519 = { version = "^0", optional = true }
log = "^0.4"
maplit = "^1"
multimap = "^0.10"
natlex_sort = "^0"
num-rational = "^0.4"
num-traits = "^0.2"
parking_lot = "^0.12"
paste = "^1"
scheduled-thread-pool = "^0.2"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_yaml = "^0"
sha2 = { version = "^0.10", optional = true }
shellexpand = "^3.0"
skiplist = "^0.5"
thiserror = "^2.0.12"
toml = { version = "^0.8", optional = true }

tokio = { version = "^1", features = ["fs", "macros", "rt-multi-thread"], optional = true }
reqwest = { version = "^0.12", optional = true }
url = { version = "^2.3", optional = true  }

[dev-dependencies]
serde_test = "^1.0"
serial_test = "^3.2.0"
tempfile = "^3"

[features]
full = ["dotenv", "toml", "secrets", "bootstrapper"]
default = ["secrets"]
dotenv = ["dep:dotenvy"]
toml = ["dep:toml"]
secrets = ["dep:ecies_25519", "dep:curve25519-parser", "dep:sha2"]
secrets_systemd = ["secrets"]
bootstrapper = [ "dep:reqwest", "dep:tokio", "dep:url"]

[[example]]
name = "bootstrap"
required-features = ["bootstrapper"]